Fix page exploding
When the screen got too small to fit the full side nav, things exploded
all over the place because it escaped its container. This just hides
whatever is off the screen. If you have a crappy low-res screen... too
bad, you can't navigate my site.

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -16,6 +16,7 @@ body {
   width: 400px;
   height: 100%;
   background-color: #333;
+  overflow: hidden;
 }
 
 nav > ul {
